--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "bulma": "^0.9.0",
     "node-sass": "^4.14.1",
+    "obs-websocket-js": "github:Niek/obs-websocket-js",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-postcss": "^3.1.2",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
