--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "sirv public"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@mdi/js": "^5.5.55",
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "@mdi/js": "^5.6.55",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-html": "^0.2.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
@@ -16,14 +16,14 @@
     "compare-versions": "^3.6.0",
     "mdi-svelte": "^1.1.1",
     "node-sass": "^4.14.1",
-    "obs-websocket-js": "github:Niek/obs-websocket-js",
-    "rollup": "^2.26.9",
+    "obs-websocket-js": "^4.0.2",
+    "rollup": "^2.28.2",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.1",
-    "svelte": "^3.24.1"
+    "rollup-plugin-svelte": "^6.0.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.27.0"
   },
   "dependencies": {
     "sirv-cli": "^1.0.6"
