--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
-    "@mdi/js": "^5.6.55",
+    "@mdi/js": "^5.8.55",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-html": "^0.2.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
-    "bulma": "^0.9.0",
+    "bulma": "^0.9.1",
     "compare-versions": "^3.6.0",
-    "mdi-svelte": "^1.1.1",
-    "node-sass": "^4.14.1",
+    "mdi-svelte": "^1.1.2",
     "obs-websocket-js": "^4.0.2",
-    "rollup": "^2.28.2",
+    "rollup": "^2.32.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-svelte": "^6.0.1",
+    "rollup-plugin-svelte": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.27.0"
+    "sass": "^1.27.0",
+    "svelte": "^3.29.4"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.6"
+    "sirv-cli": "^1.0.8"
   }
 }
