--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.2",
-    "@mdi/js": "^6.1.95",
+    "@mdi/js": "^6.7.96",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-html": "^0.2.0",
+    "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "bulma": "^0.9.1",
     "compare-versions": "^4.1.3",
     "mdi-svelte": "^1.1.2",
     "obs-websocket-js": "^4.0.2",
+    "postcss": "^8.4.14",
     "rollup": "^2.33.2",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
