Fix Docker action

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - master
-  
+
+jobs: 
   docker:
     name: Build and push Docker image
     runs-on: ubuntu-latest
