--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,10 +29,10 @@ jobs:
           node-version: '18'
 
       - name: Build v4
-        run: cd v4 && npm i && npm run build
+        run: cd v4 && npm ci && npm run build
 
       - name: Build v5
-        run: cd v5 && npm i && npm run lint && npm run build
+        run: cd v5 && npm ci && npm run lint && npm run build
 
       - name: Make a single folder with v4 and v5
         run: cp -r v5/public . && cp -r v4/public public/v4
