--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "rollup -c --bundleConfigAsCjs",
+    "dev": "rollup -c -w --bundleConfigAsCjs",
     "start": "sirv public --host --port 5000",
     "lint": "npx standard --fix && npx standard --parser svelte-eslint-parser --plugin svelte '**/*.svelte' --fix"
   },
@@ -13,18 +13,18 @@
     "@rollup/plugin-commonjs": "^23.0.3",
     "@rollup/plugin-html": "^1.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.0",
     "bulma": "^0.9.4",
     "compare-versions": "^5.0.1",
     "eslint-plugin-svelte": "^2.14.0",
     "mdi-svelte": "^1.1.2",
     "obs-websocket-js": "^5.0.1",
     "postcss": "^8.4.19",
-    "rollup": "^2.79.1",
+    "rollup": "^3.6.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-polyfill-node": "^0.11.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.56.1",
     "standard": "^17.0.0",
     "svelte": "^3.54.0"
