--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "svelte": "^3.54.0"
   },
   "dependencies": {
+    "arg": "^5.0.2",
     "sirv-cli": "^2.0.2",
     "svelte-local-storage-store": "^0.3.2"
   }
