--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /node_modules/
+/node_modules/
 /public/bundle-*
 /public/index.html
 .DS_Store
+config/default.json
+credentials.json
+thumbnails/mythumbnail.jpeg
