--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "mdi-svelte": "^1.1.2",
     "obs-websocket-js": "^5.0.1",
     "postcss": "^8.4.31",
-    "rollup": "<4",
+    "rollup": "^4",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-polyfill-node": "^0.12.0",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.1.6",
     "sass": "^1.69.5",
