--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
     "dev": "rollup -c -w --bundleConfigAsCjs",
-    "start": "sirv public --host --port 5000",
-    "lint": "npx standard --fix && npx standard --parser svelte-eslint-parser --plugin svelte '**/*.svelte' --fix"
+    "start": "sirv public --host --port 8080",
+    "lint": "standard --fix && standard --parser svelte-eslint-parser --plugin svelte '**/*.svelte' --fix"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "<7",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@mdi/js": "^7.4.47",
-    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-html": "^2.0.0",
-    "@rollup/plugin-node-resolve": "^16",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "bulma": "<1",
     "compare-versions": "^6.1.1",
-    "eslint-plugin-svelte": "^2.46.1",
+    "eslint-plugin-svelte": "^3.12.3",
     "mdi-svelte": "^1.1.2",
-    "obs-websocket-js": "^5.0.1",
-    "postcss": "^8.5.3",
-    "rollup": "^4",
+    "obs-websocket-js": "^5.0.6",
+    "postcss": "^8.5.6",
+    "rollup": "^4.50.2",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-svelte": "^7.2.0",
-    "sass": "^1.89.0",
+    "rollup-plugin-svelte": "^7.2.3",
+    "sass": "^1.92.1",
     "standard": "^17.1.2",
-    "svelte": "<5"
+    "svelte": "^5.38.10",
+    "svelte-eslint-parser": "^1.3.2"
   },
   "dependencies": {
     "sirv-cli": "^3"
