chore: upgrade Node setup action to v5 and update node version to lts

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,9 +24,9 @@ jobs:
           path: v5
 
       - name: Setup Node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
-          node-version: '18'
+          node-version: 'lts'
 
       - name: Build v4
         run: cd v4 && npm ci && npm run build
