--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
-          node-version: 'lts'
+          node-version: 'lts/*'
 
       - name: Build v4
         run: cd v4 && npm ci && npm run build
