--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@rollup/plugin-html": "^2.0.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
-    "bulma": "<1",
+    "bulma": "^1.0.3",
     "compare-versions": "^6.1.1",
     "eslint-plugin-svelte": "^3.12.3",
     "mdi-svelte": "^1.1.2",
