--- a/package.json
+++ b/package.json
@@ -1,36 +1,29 @@
 {
-  "name": "svelte-app",
+  "name": "obs-web",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "build": "rollup -c --bundleConfigAsCjs",
-    "dev": "rollup -c -w --bundleConfigAsCjs",
-    "start": "sirv public --host --port 8080",
-    "lint": "standard --fix && standard --parser svelte-eslint-parser --plugin svelte '**/*.svelte' --fix"
+    "build": "vite build",
+    "dev": "vite dev --host --port 8080",
+    "start": "vite preview --host --port 8080",
+    "lint": "standard --fix && standard --parser svelte-eslint-parser --plugin svelte 'src/**/*.svelte' --fix"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^7.0.2",
+    "@sveltejs/adapter-static": "^3.0.9",
+    "@sveltejs/kit": "^2.42.1",
     "@mdi/js": "^7.4.47",
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-html": "^2.0.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-terser": "^0.4.4",
-    "bulma": "^1.0.3",
-    "compare-versions": "^6.1.1",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "eslint-plugin-svelte": "^3.12.3",
+    "bulma": "^1.0.4",
+    "compare-versions": "^6.1.1",
     "mdi-svelte": "^1.1.2",
     "obs-websocket-js": "^5.0.6",
-    "postcss": "^8.5.6",
-    "rollup": "^4.50.2",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-polyfill-node": "^0.13.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-svelte": "^7.2.3",
     "sass": "^1.92.1",
     "standard": "^17.1.2",
-    "svelte": "^5.38.10",
-    "svelte-eslint-parser": "^1.3.2"
-  },
-  "dependencies": {
-    "sirv-cli": "^3"
+    "svelte": "^5.39.2",
+    "svelte-eslint-parser": "^1.3.2",
+    "svelte-preprocess": "^6.0.3",
+    "terser": "^5.44.0",
+    "vite": "^7.1.6"
   }
 }
