--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
     "build": "vite build",
     "dev": "vite dev --host --port 8080",
     "start": "vite preview --host --port 8080",
-    "lint": "standard --fix && standard --parser svelte-eslint-parser --plugin svelte 'src/**/*.svelte' --fix"
+    "lint": "eslint . --ext .js,.ts,.svelte,.html --fix"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2",
+    "@mdi/js": "^7.4.47",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/kit": "^2.42.1",
-    "@mdi/js": "^7.4.47",
-    "@fullhuman/postcss-purgecss": "^7.0.2",
-    "eslint-plugin-svelte": "^3.12.3",
     "bulma": "^1.0.4",
     "compare-versions": "^6.1.1",
+    "eslint": "^9.35.0",
+    "eslint-plugin-html": "^8.1.3",
+    "eslint-plugin-svelte": "^3.12.3",
     "mdi-svelte": "^1.1.2",
+    "neostandard": "^0.12.2",
     "obs-websocket-js": "^5.0.6",
     "sass": "^1.92.1",
-    "standard": "^17.1.2",
     "svelte": "^5.39.2",
     "svelte-eslint-parser": "^1.3.2",
     "svelte-preprocess": "^6.0.3",
     "terser": "^5.44.0",
+    "typescript": "^5.9.2",
     "vite": "^7.1.6"
   }
 }
